--- a/www/css/index.css
+++ b/www/css/index.css
@@ -124,3 +124,33 @@ h1 {
 .mb-3 {
     margin-bottom: 3rem;
 }
+
+.my-1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-around {
+    justify-content: space-around;
+}
+
+.w-75 {
+    width: 75%;
+}
+
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
